<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".FrameActivity">

    <Button
        android:layout_width="98dp"
        android:layout_height="99dp"
        android:text="@string/btn_frame_name"
        android:id="@+id/btn_frame"
        android:layout_gravity="left|top"
        android:onClick="onClickBtn4" />

    <Button
        android:layout_width="93dp"
        android:layout_height="99dp"
        android:text="@string/btn_linear_name"
        android:id="@+id/btn_linear"
        android:layout_gravity="center_horizontal|top"
        android:onClick="onClickBtn4" />

    <Button
        android:layout_width="101dp"
        android:layout_height="99dp"
        android:text="@string/btn_relative_name"
        android:id="@+id/btn_relative"
        android:layout_gravity="right|top"
        android:onClick="onClickBtn4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn2_name"
        android:id="@+id/btn2"
        android:layout_gravity="right|center_vertical"
        android:onClick="onClickBtn4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn4_name"
        android:id="@+id/btn4"
        android:layout_gravity="right|bottom"
        android:onClick="onClickBtn4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn3_name"
        android:id="@+id/btn3"
        android:layout_gravity="left|bottom"
        android:onClick="onClickBtn4" />

    <Button
        android:layout_width="101dp"
        android:layout_height="99dp"
        android:text="@string/btn_table_name"
        android:id="@+id/btn_table"
        android:layout_gravity="center"
        android:onClick="onClickBtn4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn1_name"
        android:id="@+id/btn1"
        android:layout_gravity="left|center_vertical"
        android:onClick="onClickBtn4" />
</FrameLayout>
