<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".LinearActivity">

    <Button
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_relative_name"
        android:id="@+id/btn_relative"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickBtn2" />

    <Button
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_linear_name"
        android:id="@+id/btn_linear"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickBtn2" />

    <Button
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_table_name"
        android:id="@+id/btn_table"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickBtn2" />

    <Button
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_frame_name"
        android:id="@+id/btn_frame"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickBtn2" />

    <Button
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:text="@string/btn1_name"
        android:id="@+id/btn1"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickBtn2" />

    <Button
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:text="@string/btn2_name"
        android:id="@+id/btn2"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickBtn2" />

    <Button
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:text="@string/btn3_name"
        android:id="@+id/btn3"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickBtn2" />

    <Button
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:text="@string/btn4_name"
        android:id="@+id/btn4"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickBtn2" />
</LinearLayout>
