<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RelativeActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_frame_name"
        android:id="@+id/btn_frame"
        android:layout_below="@+id/btn2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="onClickBtn1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_linear_name"
        android:id="@+id/btn_linear"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClickBtn1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn2_name"
        android:id="@+id/btn2"
        android:layout_below="@+id/btn1"
        android:layout_alignLeft="@+id/btn3"
        android:layout_alignStart="@+id/btn3"
        android:onClick="onClickBtn1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_relative_name"
        android:id="@+id/btn_relative"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/btn_frame"
        android:layout_alignEnd="@+id/btn_frame"
        android:onClick="onClickBtn1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn3_name"
        android:id="@+id/btn3"
        android:layout_above="@+id/btn4"
        android:layout_alignLeft="@+id/btn_table"
        android:layout_alignStart="@+id/btn_table"
        android:onClick="onClickBtn1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_table_name"
        android:id="@+id/btn_table"
        android:layout_below="@+id/btn_linear"
        android:layout_alignRight="@+id/btn_linear"
        android:layout_alignEnd="@+id/btn_linear"
        android:layout_marginTop="74dp"
        android:onClick="onClickBtn1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn1_name"
        android:id="@+id/btn1"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/btn2"
        android:layout_alignStart="@+id/btn2"
        android:onClick="onClickBtn1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn4_name"
        android:id="@+id/btn4"
        android:layout_above="@+id/btn_linear"
        android:layout_alignLeft="@+id/btn3"
        android:layout_alignStart="@+id/btn3"
        android:onClick="onClickBtn1" />
</RelativeLayout>
